--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
             z-index: 1000;
         }
         #splash-screen img {
-            width: 150px;
+            width: 550px;
+            hight: 350px;
             animation: fadeInOut 3s ease-in-out;
         }
 
