--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
             50% { opacity: 1; }
         }
     </style>
+    <!-- Favicon -->
+    <link rel="icon" href="https://raw.githubusercontent.com/pratikkarbhal/Web-IPTV/main/live.gif" type="image/gif">
 </head>
 <body>
     <div id="splash-screen">
